<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title=""
        android:icon="@drawable/ic_settings"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/mi_Item1_MM"
                android:icon="@drawable/ic_unchecked"
                android:title="@string/s_item1Title"/>

            <item
                android:id="@+id/mi_Item2_MM"
                android:icon="@drawable/ic_unchecked"
                android:title="@string/s_item2Title"/>

            <item
                android:id="@+id/mi_Item3_MM"
                android:icon="@drawable/ic_unchecked"
                android:title="@string/s_item3Title"/>
        </menu>

    </item>

</menu>