<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="970">

        <TextView
            style="@style/stl_itemText"

            android:id="@+id/tv_Item1Text_AM"
            android:text="@string/s_item1Text"

            android:layout_marginTop="@dimen/d_size_22dp"
            android:layout_marginBottom="@dimen/d_size_11dp"
            android:layout_marginLeft="@dimen/d_size_22dp"
            android:layout_marginRight="@dimen/d_size_11dp"/>

        <TextView
            style="@style/stl_itemTitle"

            android:id="@+id/tv_Item1Title_AM"
            android:text="@string/s_item1Title"

            android:layout_alignTop="@id/tv_Item1Text_AM"
            android:layout_marginTop="@dimen/d_textSize_12sp"
            android:layout_alignLeft="@id/tv_Item1Text_AM"
            android:layout_marginLeft="@dimen/d_size_10dp"
            android:layout_alignStart="@id/tv_Item1Text_AM"
            android:layout_marginStart="@dimen/d_size_10dp" />

        <Button
            style="@style/stl_itemSettings"

            android:id="@+id/btn_Item1Settings_AM"

            android:layout_alignBottom="@id/tv_Item1Title_AM"
            android:layout_alignRight="@id/tv_Item1Text_AM"
            android:layout_marginRight="@dimen/d_size_10dp"
            android:layout_alignEnd="@id/tv_Item1Text_AM"
            android:layout_marginEnd="@dimen/d_size_10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1000">

        <TextView
            style="@style/stl_itemText"

            android:id="@+id/tv_Item2Text_AM"
            android:text="@string/s_item2Text"

            android:layout_marginTop="@dimen/d_size_11dp"
            android:layout_marginBottom="@dimen/d_size_11dp"
            android:layout_marginLeft="@dimen/d_size_22dp"
            android:layout_marginRight="@dimen/d_size_22dp"/>

        <TextView
            style="@style/stl_itemTitle"

            android:id="@+id/tv_Item2Title_AM"
            android:text="@string/s_item2Title"

            android:layout_alignTop="@id/tv_Item2Text_AM"
            android:layout_marginTop="@dimen/d_textSize_12sp"
            android:layout_alignLeft="@id/tv_Item2Text_AM"
            android:layout_marginLeft="@dimen/d_size_10dp"
            android:layout_alignStart="@id/tv_Item2Text_AM"
            android:layout_marginStart="@dimen/d_size_10dp" />

        <Button
            style="@style/stl_itemSettings"

            android:id="@+id/btn_Item2Settings_AM"

            android:layout_alignBottom="@id/tv_Item2Title_AM"
            android:layout_alignRight="@id/tv_Item2Text_AM"
            android:layout_marginRight="@dimen/d_size_10dp"
            android:layout_alignEnd="@id/tv_Item2Text_AM"
            android:layout_marginEnd="@dimen/d_size_10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="965">

        <TextView
            style="@style/stl_itemText"

            android:id="@+id/tv_Item3Text_AM"
            android:text="@string/s_item3Text"

            android:layout_marginTop="@dimen/d_size_11dp"
            android:layout_marginBottom="@dimen/d_size_22dp"
            android:layout_marginLeft="@dimen/d_size_22dp"
            android:layout_marginRight="@dimen/d_size_22dp"/>

        <TextView
            style="@style/stl_itemTitle"

            android:id="@+id/tv_Item3Title_AM"
            android:text="@string/s_item3Title"

            android:layout_alignTop="@id/tv_Item3Text_AM"
            android:layout_marginTop="@dimen/d_textSize_12sp"
            android:layout_alignLeft="@id/tv_Item3Text_AM"
            android:layout_marginLeft="@dimen/d_size_10dp"
            android:layout_alignStart="@id/tv_Item3Text_AM"
            android:layout_marginStart="@dimen/d_size_10dp" />

        <Button
            style="@style/stl_itemSettings"

            android:id="@+id/btn_Item3Settings_AM"

            android:layout_alignBottom="@id/tv_Item3Title_AM"
            android:layout_alignRight="@id/tv_Item3Text_AM"
            android:layout_marginRight="@dimen/d_size_10dp"
            android:layout_alignEnd="@id/tv_Item3Text_AM"
            android:layout_marginEnd="@dimen/d_size_10dp" />

    </RelativeLayout>

</LinearLayout>